Fix buttons padding when there's white space at start/ending

--- a/resources/assets/less/bem/forum-topic-title.less
+++ b/resources/assets/less/bem/forum-topic-title.less
@@ -47,6 +47,7 @@
     pointer-events: none;
     opacity: 0;
     overflow: hidden;
+    white-space: pre;
   }
 
   &__group {
